--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -6,65 +6,71 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ChatFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
-<!--    <TextView-->
-<!--        android:id="@+id/under_construction"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-
-<!--        android:text="Under Construction..."-->
-<!--        android:textSize="30dp"-->
-
-<!--        android:layout_centerInParent="true"-->
-<!--        android:gravity="center"-->
-
-<!--        />-->
-
-<!--    <ImageView-->
-<!--        android:layout_width="50dp"-->
-<!--        android:layout_height="50dp"-->
-
-<!--        android:src="@drawable/icon_construction"-->
-<!--        android:layout_below="@id/under_construction"-->
-<!--        android:layout_centerHorizontal="true"-->
-
-<!--        />-->
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="60dp"
         android:id="@+id/chat_nav_layout"
 
-        android:layout_below="@id/toolbar"
+
         >
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
             android:id="@+id/chat_buy_btn"
 
             android:text="Buy"
             android:textStyle="bold"
-            android:layout_marginStart="90dp"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="@color/teal_200"
+            android:textSize="25dp"
+            android:textColor="@color/black"
+
+            android:gravity="center"
+            android:layout_marginTop="15dp"
+            android:backgroundTint="@null"
             />
 
-        <Button
-            android:id="@+id/chat_sell_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
+        <View
+            android:id="@+id/buy_indicator"
+            android:layout_width="200dp"
+            android:layout_height="3dp"
 
-            android:layout_marginStart="50dp"
-            android:layout_marginLeft="74dp"
-            android:layout_marginTop="10dp"
-            android:layout_toRightOf="@id/chat_buy_btn"
-            android:backgroundTint="@color/security"
+            android:background="@android:color/darker_gray"
+
+            android:layout_below="@id/chat_buy_btn"
+
+            />
+
+
+        <TextView
+            android:id="@+id/chat_sell_btn"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentEnd="true"
             android:text="Sell"
 
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textSize="25dp"
+            android:textColor="@color/black"
+
+            android:gravity="center"
+            android:layout_marginTop="15dp"
+            android:backgroundTint="@null"
+
+            />
+
+        <View
+            android:id="@+id/sell_indicator"
+            android:layout_width="200dp"
+            android:layout_height="3dp"
+
+            android:background="@android:color/darker_gray"
+
+            android:layout_below="@id/chat_sell_btn"
+            android:layout_alignParentEnd="true"
+
+            />
 
     </RelativeLayout>
 
