--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,47 +20,45 @@
             app:menu="@menu/navigation_menu"
             app:showAsAction="always"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:background="@color/primary"
-            tools:ignore="UnknownId">
+<!--        <RelativeLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="250dp"-->
+<!--            android:background="@color/primary"-->
+<!--            tools:ignore="UnknownId">-->
 
-            <ImageView
-                android:id="@+id/imageView_profile_user"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_centerInParent="true"
-                android:background="@drawable/book1" />
+<!--            <ImageView-->
+<!--                android:id="@+id/imageView_profile_user"-->
+<!--                android:layout_width="150dp"-->
+<!--                android:layout_height="150dp"-->
+<!--                android:layout_centerInParent="true"-->
+<!--                android:background="@drawable/book1" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/TextView_show_welcome"
-                android:layout_below="@+id/imageView_profile_user"
-                android:hint="Loading......"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="5dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:textColor="@color/white"/>
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:id="@+id/TextView_show_welcome"-->
+<!--                android:layout_below="@+id/imageView_profile_user"-->
+<!--                android:hint="Loading......"-->
+<!--                android:layout_centerHorizontal="true"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                android:textAppearance="@style/TextAppearance.AppCompat.Headline"-->
+<!--                android:textColor="@color/white"/>-->
 
-        </RelativeLayout>
+<!--        </RelativeLayout>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/round_back_white10_20"
+        android:layout_margin="20dp"
+        android:background="@color/white"
         android:orientation="vertical"
-        android:padding="15dp"
+        android:padding="1dp"
         android:radius="20dp">
 
         <RelativeLayout
             android:layout_width="337dp"
             android:layout_height="match_parent"
             android:layout_margin="15dp"
-            android:background="@color/white"
+            android:background="@drawable/round_back_white10_20"
             android:padding="15dp">
 
             <!---show name -->
@@ -114,8 +112,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/divider_name"
                 android:layout_alignStart="@id/ic_email"
-                android:layout_marginStart="230dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="250dp"
+                android:layout_marginTop="30dp"
                 android:hint="Loading" />
 
             <View
