--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -177,7 +177,7 @@
                     android:layout_marginTop="30dp"
                     android:layout_marginLeft="70dp"
                     android:layout_centerHorizontal="true"
-                    android:backgroundTint="@color/light_blue"
+                    android:background="@drawable/bottom_nap"
                     android:text="Login"
                     android:textColor="@color/black"
                     android:textStyle="bold"/>
