--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,6 @@
     <color name="private_account">#E6A326</color>
     <color name="security">#D95F69</color>
     <color name="yellow1">#DFD5AF</color>
+
+    <color name="napbar">#168098</color>
 </resources>
