--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -35,11 +35,9 @@
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:layout_alignParentBottom="true"
-
         app:menu="@menu/bottom_nav_menu"
-        android:background="@color/light_gray"
+        android:background="@drawable/bottom_nap"
         />
 
 </RelativeLayout>
