--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -490,7 +490,7 @@
                     android:layout_marginTop="50dp"
                     android:layout_marginBottom="50dp"
                     android:text="@string/register"
-                    android:backgroundTint="@color/light_blue"/>
+                    android:background="@drawable/bottom_nap"/>
 
                 <ProgressBar
                     android:id="@+id/progressbar_reg"
