--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -296,7 +296,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="30dp"
                     android:text="Update Profile"
-                    android:backgroundTint="@color/light_blue"
+                    android:background="@drawable/bottom_nap"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textAlignment="center" />
