--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/primary"
+            android:background="@color/napbar"
             app:menu="@menu/navigation_menu"
             app:showAsAction="always"/>
 
@@ -26,26 +26,30 @@
 <!--            android:background="@color/primary"-->
 <!--            tools:ignore="UnknownId">-->
 
-<!--            <ImageView-->
-<!--                android:id="@+id/imageView_profile_user"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="150dp"-->
-<!--                android:layout_centerInParent="true"-->
-<!--                android:background="@drawable/book1" />-->
+<!--                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/TextView_show_welcome"
+                        android:layout_below="@+id/imageView_profile_user"
+                        android:hint="Loading......"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_centerHorizontal="true"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                        android:textColor="@color/white"/>-->
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:id="@+id/TextView_show_welcome"-->
-<!--                android:layout_below="@+id/imageView_profile_user"-->
-<!--                android:hint="Loading......"-->
-<!--                android:layout_centerHorizontal="true"-->
-<!--                android:layout_marginTop="5dp"-->
-<!--                android:textAppearance="@style/TextAppearance.AppCompat.Headline"-->
-<!--                android:textColor="@color/white"/>-->
+       <!-- </RelativeLayout>-->
 
-<!--        </RelativeLayout>-->
-    <LinearLayout
+        <ImageView
+            android:id="@+id/imageView_profile_user"
+            android:layout_width="130dp"
+            android:layout_height="140dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/icon"/>
+
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -55,7 +59,7 @@
         android:radius="20dp">
 
         <RelativeLayout
-            android:layout_width="337dp"
+            android:layout_width="330dp"
             android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:background="@drawable/round_back_white10_20"
