--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -37,4 +37,9 @@
         <item name="colorSwitchThumbNormal">#1E1616</item>
         <item name="android:foreground">#99FFFFFF</item>
     </style>
+
+    <style name="ThemeOverlay.BoiiMela.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    </style>
 </resources>
