--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -59,18 +59,37 @@
                 android:textStyle="bold" />-->
 
                 <!-- Edit profile -->
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/buttonEditProfile"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="25dp"
-                android:background="@drawable/round_back_secondery_100"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:text="Edit Profile"
-                android:textAllCaps="false"
-                android:textColor="@color/primary" />
+          <LinearLayout
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content">
+
+              <androidx.appcompat.widget.AppCompatButton
+                  android:id="@+id/buttonEditProfile"
+                  android:layout_width="wrap_content"
+                  android:layout_height="50dp"
+                  android:layout_marginTop="25dp"
+                  android:layout_marginLeft="70dp"
+                  android:background="@drawable/round_back_secondery_100"
+                  android:paddingStart="20dp"
+                  android:paddingEnd="20dp"
+                  android:text="Edit Profile"
+                  android:textAllCaps="false"
+                  android:textColor="@color/primary" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/buttonDeleteProfile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginRight="70dp"
+                    android:layout_marginLeft="30dp"
+                    android:background="@drawable/round_back_security"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="20dp"
+                    android:text="Edit Profile"
+                    android:textAllCaps="false"
+                    android:textColor="@color/primary" />
+          </LinearLayout>
 
 
             <LinearLayout
@@ -204,6 +223,7 @@
 
                 <!-- Security -->
                 <RelativeLayout
+                    android:id="@+id/RL_security"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp">
@@ -235,71 +255,6 @@
 
                 </RelativeLayout>
 
-                <!-- Update Email -->
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
-
-                    <ImageView
-                        android:id="@+id/EmailUpdate"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/round_back_private_account"
-                        android:padding="15dp"
-                        android:src="@drawable/ic_email" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="40dp"
-                        android:layout_toEndOf="@+id/EmailUpdate"
-                        android:text="Update Email"
-                        android:textColor="#1E1616"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/right_arrow_icon" />
-
-                </RelativeLayout>
-
-                <!-- Update Email -->
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
-
-                    <ImageView
-                        android:id="@+id/ChangePasssword"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/round_back_security"
-                        android:padding="15dp"
-                        android:src="@drawable/lock3" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="40dp"
-                        android:layout_toEndOf="@+id/ChangePasssword"
-                        android:text="Change Password"
-                        android:textColor="#1E1616"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/right_arrow_icon" />
-
-                </RelativeLayout>
                 <!-- TextSize -->
                 <!--                <RelativeLayout-->
                 <!--                    android:layout_width="match_parent"-->
