random changes - Saqib

--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -78,7 +78,7 @@
                 <LinearLayout
                     android:id="@+id/lin_1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:layout_toEndOf="@id/imgg"
                     android:layout_toRightOf="@id/imgg"
                     android:orientation="vertical">
@@ -86,25 +86,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginTop="0dp"
-                        android:text="@string/phone_no"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginTop="10dp"
+                        android:text="6291526612"
                         android:textStyle="bold"
                         android:textColor="@android:color/black"
-                        android:textSize="16sp" />
+                        android:textSize="30sp" />
 
-                    <TextView
-                        android:id="@+id/call"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginTop="8dp"
-                        android:text="@string/_91_8383066031"
-                        android:textColor="#0277BD"
-                        android:textColorHighlight="@android:color/holo_red_dark"
-                        android:textSize="16sp" />
 
                 </LinearLayout>
 
@@ -122,7 +110,7 @@
                 <LinearLayout
                     android:id="@+id/lin_2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:orientation="vertical"
                     android:layout_below="@id/lin_1"
                     android:layout_marginTop="15dp"
@@ -130,27 +118,15 @@
                     android:layout_toEndOf="@id/img_mob">
 
                     <TextView
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginLeft="12dp"
-                        android:textSize="16sp"
-                        android:layout_marginTop="0dp"
-                        android:textColor="@android:color/black"
-                        android:text="@string/email_address" />
-
-                    <TextView
                         android:id="@+id/feedback"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginTop="8dp"
-                        android:text="@string/info_seekmyvision_in"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginTop="10dp"
+                        android:text="boiimela2023@gmail.com"
                         android:textColor="#0277BD"
                         android:textColorHighlight="@color/black"
-                        android:textSize="16sp" />
+                        android:textSize="20sp" />
 
                 </LinearLayout>
 
@@ -168,7 +144,7 @@
                 <LinearLayout
                     android:id="@+id/lin_3"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:orientation="vertical"
                     android:layout_below="@id/lin_2"
                     android:layout_marginTop="15dp"
@@ -176,28 +152,17 @@
                     android:layout_toEndOf="@id/mail_img"
                     >
 
-                    <TextView
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginTop="0dp"
-                        android:textSize="16sp"
-                        android:textColor="@android:color/black"
-                        android:text="@string/ask_your_query" />
 
                     <TextView
                         android:id="@+id/send_your_message"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginTop="8dp"
-                        android:text="@string/send_your_message"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginTop="10dp"
+                        android:text="www.github.com/boiimela"
                         android:textColor="#0277BD"
                         android:textColorHighlight="@color/black"
-                        android:textSize="16sp" />
+                        android:textSize="20sp" />
 
                 </LinearLayout>
 
